snapshot-tests/tests/snapshots/parser__bare_number.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[wanted]: expected an equals, found eof at 4
  ┌─ bare_number:1:2
  │
1 │ 4
  │  ^ expected an equals
